--- a/TVShowWEB/Web.config
+++ b/TVShowWEB/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TVShowWEB-20160309101518.mdf;Initial Catalog=aspnet-TVShowWEB-20160309101518;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="TVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HPDV6;initial catalog=TV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TVEntity" connectionString="data source=HPDV6;initial catalog=TV;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
