--- a/TVShowWEB/TVShowWEB.csproj
+++ b/TVShowWEB/TVShowWEB.csproj
@@ -216,6 +216,7 @@
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Image\TV\tt0096697\poster.jpg" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\grid.css" />
@@ -314,10 +315,10 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\TV\tt0096697\" />
-    <Folder Include="App_Data\TV\tt0106179\" />
-    <Folder Include="App_Data\TV\tt2575988\" />
-    <Folder Include="App_Data\TV\tt3749900\" />
+    <Folder Include="App_Data\" />
+    <Folder Include="Image\TV\tt0106179\" />
+    <Folder Include="Image\TV\tt2575988\" />
+    <Folder Include="Image\TV\tt3749900\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
