--- a/TVShowWEB/Web.config
+++ b/TVShowWEB/Web.config
@@ -13,6 +13,7 @@
     <add name="TVEntity" connectionString="data source=HPDV6;initial catalog=TV;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="TVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HPDV6;initial catalog=TV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="TVEntities_" connectionString="metadata=res://*/Models.TVEntity.csdl|res://*/Models.TVEntity.ssdl|res://*/Models.TVEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HPDV6;initial catalog=TV;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TVEnt" connectionString="metadata=res://*/Models.TVEntity.csdl|res://*/Models.TVEntity.ssdl|res://*/Models.TVEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HPDV6;initial catalog=TV;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
